--- a/src/content/glyphs/42606.md
+++ b/src/content/glyphs/42606.md
@@ -6,4 +6,4 @@ lowerCase: ꙮ
 upperCase: ꙮ
 ---
 
-From the Old Church Slavonic phrase "серафими многоꙮчитїй" (serafimi mnogoočitii, "many-eyed seraphim"). It was used in the Book of Psalms from around 1429. 
+Used in the Old Church Slavonic phrase "серафими многоꙮчитїй" ("many-eyed seraphim") in the Book of Psalms around 1429.
